@@ -1,3 +1,15 @@
+2009-02-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/admin/gtk/dialogs.py:
+	* flumotion/admin/gtk/main.py:
+	Moved the exceptionHandler to dialogs.py so it can be used from other
+	parts of the project.
+	* flumotion/ui/wizard.py:
+	Catch all the exceptions thrown while loading the steps and show the
+	exception dialog.
+	Fixes #2792 (pt)
+	
+
 2009-02-05  Jan Urbanski  <jurbanski@flumotion.com>
 
 	* flumotion/component/plugs/rrd.py:
